Fix scroll and fixed width issue on mobile when opening menu.

--- a/src/styles/_burger-menu.scss
+++ b/src/styles/_burger-menu.scss
@@ -17,19 +17,13 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  /*height: 1em !important;
-  width: 1em !important;
-  right: -2em !important;
-  button {
-    cursor: pointer;
-  }*/
   display: none;
 }
 
 /* Color/shape of close button cross */
-.bm-cross {
-  // background: #333;
-}
+/*.bm-cross {
+  background: #333;
+}*/
 
 /* General sidebar styles */
 .bm-menu {
